# rust_parser

./: Cargo.toml  README.md  rustfmt.toml
examples/: lexing_example.rs
src/: errors.rs  lib.rs  main.rs
src/lexer/: mod.rs  tokens.rs
src/parser/: expressions.rs  mod copy.rs  mod.rs  statements.rs
src/runtime/: environment.rs  mod.rs  values.rs
src/tokens/: mod.rs
