[package]
name = "xp_lexing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For exploratory dev.

[dependencies]

logos = { version = "0.13.0" }
watch = "0.2.3"

