[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_parser"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # For exploratory dev.


[dependencies]
logos = { version = "0.13.0" }


